2008-10-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track CompletionData API.

2008-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/DataProvider.cs: Track API.

2008-10-01  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/CProject.cs: Track API.

2008-09-29  Mike Krüger <mkrueger@novell.com> 

	* Gui/DataProvider.cs: implemented IComparable.

2008-09-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/DataProvider.cs: Track api changes.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* CBinding.mdp: Updated projects.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/CBinding.PackageDetails.cs, gtk-gui/generated.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.AddPathDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.GeneralOptionsPanel.cs,
	  gtk-gui/CBinding.CompilerPanel.cs,
	  gtk-gui/CBinding.OutputOptionsPanel.cs,
	  gtk-gui/CBinding.AddLibraryDialog.cs: Updated generated code.

2008-09-08  Mitchell Wheeler <mitchell.wheeler@gmail.com>

	* Gui/CTextEditorExtension.cs, Gui/AddLibraryDialog.cs,
	  Navigation/LanguageItemCommandHandler.cs,
	  Project/CProjectConfiguration.cs, Project/CProject.cs,
	  gtk-gui/CBinding.PackageDetails.cs, gtk-gui/generated.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.AddPathDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.GeneralOptionsPanel.cs,
	  gtk-gui/CBinding.CompilerPanel.cs,
	  gtk-gui/CBinding.OutputOptionsPanel.cs,
	  gtk-gui/CBinding.AddLibraryDialog.cs, gtk-gui/gui.stetic,
	  Compiler/GNUCompiler.cs: Fixed various (dependency parsing,
	  compiling, linking) bugs, so the binding now properly handles
	  pathnames with spaces, and use the appropriate project
	  configuration information.  Started removing various gcc-specific
	  library naming conventions from 'generic' areas of the C Binding
	  codebase...  Compiled object & dependency files are now stored in the